feat: 完成用户服务Kratos重构(含注册/登录/更新资料/完整文档)
