# service/user/api/helloworld/v1/registration_grpc.pb.go
@@ -1,0 +1,302 @@
+// path: /registraion/api/helloworld/v1/registration.proto
+// writer: Jonas Peng; jonaspong@outlook.com jonas-peng on Github
+// NOTE!!! it is developed on Ubuntu 24, please add all neccessary depencies and packages before use it
+// API lists
+//you can add new APIs or change existing ones in this file
+//everytime you make updates to this API files, please input bash:
+//bash: kratos proto client ./api/helloworld/v1/registration.proto
+//make sure you have read all the readme and tutorials before changing
+
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.0
+// - protoc             v3.21.12
+// source: api/helloworld/v1/registration.proto
+
+//package name is api.registraion.v1
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Registration_Register_FullMethodName      = "/api.registration.v1.Registration/Register"
+	Registration_Login_FullMethodName         = "/api.registration.v1.Registration/Login"
+	Registration_GetProfile_FullMethodName    = "/api.registration.v1.Registration/GetProfile"
+	Registration_DeleteUser_FullMethodName    = "/api.registration.v1.Registration/DeleteUser"
+	Registration_UpdateProfile_FullMethodName = "/api.registration.v1.Registration/UpdateProfile"
+)
+
+// RegistrationClient is the client API for Registration service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// ---API 1:  registeration for users------
+// id is unique, password would be turned into a token made of a series of irrational ASCIIs
+type RegistrationClient interface {
+	// ---API 1:--- Function of Registration----------------------------
+	Register(ctx context.Context, in *RegisterReq, opts ...grpc.CallOption) (*RegisterReply, error)
+	// ----API 2: validation of login----
+	// check whether the token for password is validate
+	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginReply, error)
+	// ----API 3: fetching user info -----
+	// this api is CRETICAL for cross-micoservice remote connexion
+	GetProfile(ctx context.Context, in *GetProfileReq, opts ...grpc.CallOption) (*GetProfileReply, error)
+	DeleteUser(ctx context.Context, in *DeleteUserReq, opts ...grpc.CallOption) (*DeleteUserReply, error)
+	// API 5: Update profiles-------
+	UpdateProfile(ctx context.Context, in *UpdateProfileReq, opts ...grpc.CallOption) (*UpdateProfileReply, error)
+}
+
+type registrationClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewRegistrationClient(cc grpc.ClientConnInterface) RegistrationClient {
+	return &registrationClient{cc}
+}
+
+func (c *registrationClient) Register(ctx context.Context, in *RegisterReq, opts ...grpc.CallOption) (*RegisterReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(RegisterReply)
+	err := c.cc.Invoke(ctx, Registration_Register_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *registrationClient) Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(LoginReply)
+	err := c.cc.Invoke(ctx, Registration_Login_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *registrationClient) GetProfile(ctx context.Context, in *GetProfileReq, opts ...grpc.CallOption) (*GetProfileReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetProfileReply)
+	err := c.cc.Invoke(ctx, Registration_GetProfile_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *registrationClient) DeleteUser(ctx context.Context, in *DeleteUserReq, opts ...grpc.CallOption) (*DeleteUserReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteUserReply)
+	err := c.cc.Invoke(ctx, Registration_DeleteUser_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *registrationClient) UpdateProfile(ctx context.Context, in *UpdateProfileReq, opts ...grpc.CallOption) (*UpdateProfileReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateProfileReply)
+	err := c.cc.Invoke(ctx, Registration_UpdateProfile_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// RegistrationServer is the server API for Registration service.
+// All implementations must embed UnimplementedRegistrationServer
+// for forward compatibility.
+//
+// ---API 1:  registeration for users------
+// id is unique, password would be turned into a token made of a series of irrational ASCIIs
+type RegistrationServer interface {
+	// ---API 1:--- Function of Registration----------------------------
+	Register(context.Context, *RegisterReq) (*RegisterReply, error)
+	// ----API 2: validation of login----
+	// check whether the token for password is validate
+	Login(context.Context, *LoginReq) (*LoginReply, error)
+	// ----API 3: fetching user info -----
+	// this api is CRETICAL for cross-micoservice remote connexion
+	GetProfile(context.Context, *GetProfileReq) (*GetProfileReply, error)
+	DeleteUser(context.Context, *DeleteUserReq) (*DeleteUserReply, error)
+	// API 5: Update profiles-------
+	UpdateProfile(context.Context, *UpdateProfileReq) (*UpdateProfileReply, error)
+	mustEmbedUnimplementedRegistrationServer()
+}
+
+// UnimplementedRegistrationServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedRegistrationServer struct{}
+
+func (UnimplementedRegistrationServer) Register(context.Context, *RegisterReq) (*RegisterReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method Register not implemented")
+}
+func (UnimplementedRegistrationServer) Login(context.Context, *LoginReq) (*LoginReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method Login not implemented")
+}
+func (UnimplementedRegistrationServer) GetProfile(context.Context, *GetProfileReq) (*GetProfileReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetProfile not implemented")
+}
+func (UnimplementedRegistrationServer) DeleteUser(context.Context, *DeleteUserReq) (*DeleteUserReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteUser not implemented")
+}
+func (UnimplementedRegistrationServer) UpdateProfile(context.Context, *UpdateProfileReq) (*UpdateProfileReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateProfile not implemented")
+}
+func (UnimplementedRegistrationServer) mustEmbedUnimplementedRegistrationServer() {}
+func (UnimplementedRegistrationServer) testEmbeddedByValue()                      {}
+
+// UnsafeRegistrationServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to RegistrationServer will
+// result in compilation errors.
+type UnsafeRegistrationServer interface {
+	mustEmbedUnimplementedRegistrationServer()
+}
+
+func RegisterRegistrationServer(s grpc.ServiceRegistrar, srv RegistrationServer) {
+	// If the following call panics, it indicates UnimplementedRegistrationServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Registration_ServiceDesc, srv)
+}
+
+func _Registration_Register_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RegisterReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RegistrationServer).Register(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Registration_Register_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RegistrationServer).Register(ctx, req.(*RegisterReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Registration_Login_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LoginReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RegistrationServer).Login(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Registration_Login_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RegistrationServer).Login(ctx, req.(*LoginReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Registration_GetProfile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetProfileReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RegistrationServer).GetProfile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Registration_GetProfile_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RegistrationServer).GetProfile(ctx, req.(*GetProfileReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Registration_DeleteUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteUserReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RegistrationServer).DeleteUser(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Registration_DeleteUser_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RegistrationServer).DeleteUser(ctx, req.(*DeleteUserReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Registration_UpdateProfile_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateProfileReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RegistrationServer).UpdateProfile(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Registration_UpdateProfile_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RegistrationServer).UpdateProfile(ctx, req.(*UpdateProfileReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Registration_ServiceDesc is the grpc.ServiceDesc for Registration service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Registration_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.registration.v1.Registration",
+	HandlerType: (*RegistrationServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Register",
+			Handler:    _Registration_Register_Handler,
+		},
+		{
+			MethodName: "Login",
+			Handler:    _Registration_Login_Handler,
+		},
+		{
+			MethodName: "GetProfile",
+			Handler:    _Registration_GetProfile_Handler,
+		},
+		{
+			MethodName: "DeleteUser",
+			Handler:    _Registration_DeleteUser_Handler,
+		},
+		{
+			MethodName: "UpdateProfile",
+			Handler:    _Registration_UpdateProfile_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/helloworld/v1/registration.proto",
+}
