# service/user/api/helloworld/v1/registration_http.pb.go
@@ -1,0 +1,249 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v3.21.12
+// source: api/helloworld/v1/registration.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationRegistrationDeleteUser = "/api.registration.v1.Registration/DeleteUser"
+const OperationRegistrationGetProfile = "/api.registration.v1.Registration/GetProfile"
+const OperationRegistrationLogin = "/api.registration.v1.Registration/Login"
+const OperationRegistrationRegister = "/api.registration.v1.Registration/Register"
+const OperationRegistrationUpdateProfile = "/api.registration.v1.Registration/UpdateProfile"
+
+type RegistrationHTTPServer interface {
+	DeleteUser(context.Context, *DeleteUserReq) (*DeleteUserReply, error)
+	// GetProfile----API 3: fetching user info -----
+	//this api is CRETICAL for cross-micoservice remote connexion
+	GetProfile(context.Context, *GetProfileReq) (*GetProfileReply, error)
+	// Login----API 2: validation of login----
+	//check whether the token for password is validate
+	Login(context.Context, *LoginReq) (*LoginReply, error)
+	// Register---API 1:--- Function of Registration----------------------------
+	Register(context.Context, *RegisterReq) (*RegisterReply, error)
+	// UpdateProfileAPI 5: Update profiles-------
+	UpdateProfile(context.Context, *UpdateProfileReq) (*UpdateProfileReply, error)
+}
+
+func RegisterRegistrationHTTPServer(s *http.Server, srv RegistrationHTTPServer) {
+	r := s.Route("/")
+	r.POST("/register", _Registration_Register0_HTTP_Handler(srv))
+	r.POST("/login", _Registration_Login0_HTTP_Handler(srv))
+	r.GET("/user/profile", _Registration_GetProfile0_HTTP_Handler(srv))
+	r.DELETE("/user/{id}", _Registration_DeleteUser0_HTTP_Handler(srv))
+	r.PUT("/user/profile", _Registration_UpdateProfile0_HTTP_Handler(srv))
+}
+
+func _Registration_Register0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in RegisterReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationRegister)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Register(ctx, req.(*RegisterReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*RegisterReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_Login0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LoginReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_GetProfile0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetProfileReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationGetProfile)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetProfile(ctx, req.(*GetProfileReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetProfileReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_DeleteUser0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DeleteUserReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationDeleteUser)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DeleteUser(ctx, req.(*DeleteUserReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DeleteUserReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_UpdateProfile0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateProfileReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationUpdateProfile)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateProfile(ctx, req.(*UpdateProfileReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateProfileReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type RegistrationHTTPClient interface {
+	DeleteUser(ctx context.Context, req *DeleteUserReq, opts ...http.CallOption) (rsp *DeleteUserReply, err error)
+	// GetProfile----API 3: fetching user info -----
+	//this api is CRETICAL for cross-micoservice remote connexion
+	GetProfile(ctx context.Context, req *GetProfileReq, opts ...http.CallOption) (rsp *GetProfileReply, err error)
+	// Login----API 2: validation of login----
+	//check whether the token for password is validate
+	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginReply, err error)
+	// Register---API 1:--- Function of Registration----------------------------
+	Register(ctx context.Context, req *RegisterReq, opts ...http.CallOption) (rsp *RegisterReply, err error)
+	// UpdateProfileAPI 5: Update profiles-------
+	UpdateProfile(ctx context.Context, req *UpdateProfileReq, opts ...http.CallOption) (rsp *UpdateProfileReply, err error)
+}
+
+type RegistrationHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewRegistrationHTTPClient(client *http.Client) RegistrationHTTPClient {
+	return &RegistrationHTTPClientImpl{client}
+}
+
+func (c *RegistrationHTTPClientImpl) DeleteUser(ctx context.Context, in *DeleteUserReq, opts ...http.CallOption) (*DeleteUserReply, error) {
+	var out DeleteUserReply
+	pattern := "/user/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationRegistrationDeleteUser))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// GetProfile----API 3: fetching user info -----
+//this api is CRETICAL for cross-micoservice remote connexion
+func (c *RegistrationHTTPClientImpl) GetProfile(ctx context.Context, in *GetProfileReq, opts ...http.CallOption) (*GetProfileReply, error) {
+	var out GetProfileReply
+	pattern := "/user/profile"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationRegistrationGetProfile))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Login----API 2: validation of login----
+//check whether the token for password is validate
+func (c *RegistrationHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*LoginReply, error) {
+	var out LoginReply
+	pattern := "/login"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRegistrationLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Register---API 1:--- Function of Registration----------------------------
+func (c *RegistrationHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*RegisterReply, error) {
+	var out RegisterReply
+	pattern := "/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRegistrationRegister))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// UpdateProfileAPI 5: Update profiles-------
+func (c *RegistrationHTTPClientImpl) UpdateProfile(ctx context.Context, in *UpdateProfileReq, opts ...http.CallOption) (*UpdateProfileReply, error) {
+	var out UpdateProfileReply
+	pattern := "/user/profile"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRegistrationUpdateProfile))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
