# service/user/internal/server/grpc.go
@@ -1,9 +1,12 @@
+//path: ./registration/internal/service/grpc.go 
+
 package server
 
 import (
-	v1 "user/api/helloworld/v1"
-	"user/internal/conf"
-	"user/internal/service"
+	// 注意这里引入的别名是 v1
+	v1 "registration/api/helloworld/v1"
+	"registration/internal/conf"
+	"registration/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
@@ -11,7 +14,8 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+// 注意参数：这里我们要注入 *service.RegistrationService
+func NewGRPCServer(c *conf.Server, greeter *service.RegistrationService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +31,10 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	
+	// 注册服务：把我们的实现注册到 gRPC 服务器上
+	// 注意函数名变了：RegisterRegistrationServer (这是 Proto 生成的)
+	v1.RegisterRegistrationServer(srv, greeter)
+	
 	return srv
 }
