# service/user/openapi.yaml
@@ -3,19 +3,120 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: Registration API
+    description: |-
+        ---API 1:  registeration for users------
+        id is unique, password would be turned into a token made of a series of irrational ASCIIs
     version: 0.0.1
 paths:
-    /helloworld/{name}:
+    /login:
+        post:
+            tags:
+                - Registration
+            description: "----API 2: validation of login---- \ncheck whether the token for password is validate"
+            operationId: Registration_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/LoginReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LoginReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /register:
+        post:
+            tags:
+                - Registration
+            description: '---API 1:--- Function of Registration----------------------------'
+            operationId: Registration_Register
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/RegisterReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/RegisterReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /user/profile:
         get:
             tags:
-                - Greeter
-                - subgroup
-            description: Sends a greeting
-            operationId: Greeter_SayHello
+                - Registration
+            description: |-
+                ----API 3: fetching user info -----
+                this api is CRETICAL for cross-micoservice remote connexion
+            operationId: Registration_GetProfile
             parameters:
-                - name: name
+                - name: id
+                  in: query
+                  description: "parameter in on need, token will be in header to be handled by a mid \n definition of a Proto cannot be null usually,thus why id is here"
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetProfileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        put:
+            tags:
+                - Registration
+            description: 'API 5: Update profiles-------'
+            operationId: Registration_UpdateProfile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateProfileReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateProfileReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /user/{id}:
+        delete:
+            tags:
+                - Registration
+            operationId: Registration_DeleteUser
+            parameters:
+                - name: id
                   in: path
                   required: true
                   schema:
@@ -26,14 +127,92 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/DeleteUserReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        DeleteUserReply:
             type: object
             properties:
+                msg:
+                    type: string
+            description: definition parameter of reply
+        GetProfileReply:
+            type: object
+            properties:
+                username:
+                    type: string
+                nickname:
+                    type: string
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        LoginReply:
+            type: object
+            properties:
+                msg:
+                    type: string
+                token:
+                    type: string
+        LoginReq:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+        RegisterReply:
+            type: object
+            properties:
+                msg:
+                    type: string
+        RegisterReq:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+                nickname:
+                    type: string
+            description: definition of data structure on PostgreSQL(Message)
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
                 message:
                     type: string
-            description: The response message containing the greetings
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateProfileReply:
+            type: object
+            properties:
+                msg:
+                    type: string
+        UpdateProfileReq:
+            type: object
+            properties:
+                nickname:
+                    type: string
+                email:
+                    type: string
 tags:
-    - name: Greeter
+    - name: Registration
